// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Kameleoon's logEvent destination action: all fields 1`] = `
Object {
  "context": Object {
    "testType": "wNACk[QgaEuFPK",
  },
  "event": "wNACk[QgaEuFPK",
  "messageId": "wNACk[QgaEuFPK",
  "properties": Object {
    "testType": "wNACk[QgaEuFPK",
  },
  "timestamp": "2053-07-17T05:22:08.977Z",
  "type": "wNACk[QgaEuFPK",
}
`;

exports[`Testing snapshot for Kameleoon's logEvent destination action: required fields 1`] = `
Object {
  "event": "wNACk[QgaEuFPK",
  "messageId": "wNACk[QgaEuFPK",
  "timestamp": "2053-07-17T05:22:08.977Z",
  "type": "wNACk[QgaEuFPK",
}
`;
